# advent-of-code-python

./: .gitignore  .pre-commit-config.yaml  README.md  advent-of-code.cabal  pyproject.toml
2016/: README.md  day07.hs  day09.hs  day15.hs  day16.hs
2016/haskell/: day04.hs
2020/day-02/: answer.py
2021/day1/: day1.hs
2021/day10/: day10.py
2021/day17/: day.py
2021/day19/: all-rotations  geometry_utils.py  helpers.py  maths.txt  matrix1  test_geometry_utils.py
2021/day2/: day2.hs
2021/day21/: day.py
2021/day22/: part1.py
2021/day3/: day3.hs
2021/day5/: day5.py
2021/day6/: day5.hs
2021/day8/: day.py
2021/day9/: day.py
2022/day02/: __main__.py
2022/day04/: __main__.py
2022/day08/: __main__.py
2022/day13/: __main__.py
2022/day14/: __main__.py
2022/day15/: __main__.py
2022/day21/: __main__.py  __main__2.py
advent_of_code/: __main__.py  solution.py  utils.py
advent_of_code/datastructures/: dimension1.py  dimension2.py  dimension3.py  dimensionN.py
advent_of_code/solution/: __init__.py
advent_of_code/year_2015/: __init__.py  day01.py  day02.py  day03.py
advent_of_code/year_2016/: __init__.py  day01.hs  day02.hs  day06.hs  day08.py  day10.py  day11.hs  day12.hs  day14.hs  day19.hs  day20.hs
advent_of_code/year_2017/: __init__.py  day01.py  day10.py  day12.py
advent_of_code/year_2018/: __init__.py  day01.py  day02.py  day03.py
advent_of_code/year_2019/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
(+116 files in other folders)
